unpackaged/main/default/objects/Camp_Lejeune__c/Camp_Lejeune__c.object-meta.xml
<CustomObject>
    <label>Camp Lejeune</label>
    <nameField>
        <displayFormat>CL-{000000}</displayFormat>
        <label>Camp Lejeune Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Camp Lejeune</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>