unpackaged/main/default/objects/Camp_Lejeune__c/fields/Able_to_provide_hospital_info__c.field-meta.xml
<CustomField>
    <fullName>Able_to_provide_hospital_info__c</fullName>
    <label>Able to provide hospital info?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>