unpackaged/main/default/objects/Camp_Lejeune__c/fields/Agree_to_provide_accurate_information__c.field-meta.xml
<CustomField>
    <fullName>Agree_to_provide_accurate_information__c</fullName>
    <description>Please be advised that this call is recorded for training and information purposes and that your responses will be recorded exactly as you state them and reviewed by our staff and counsel. The information you provide is very important should you have a case. Additionally, you may be asked to verify your responses and/or information by affidavit so your complete honesty is very important. Do you agree to provide accurate information to the best of your knowledge?</description>
    <inlineHelpText>Please be advised that this call is recorded for training and information purposes and that your responses will be recorded exactly as you state them and reviewed by our staff and counsel. The information you provide is very important should you have a case. Additionally, you may be asked to verify your responses and/or information by affidavit so your complete honesty is very important. Do you agree to provide accurate information to the best of your knowledge?</inlineHelpText>
    <label>Agree to provide accurate information?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>