unpackaged/main/default/objects/Camp_Lejeune__c/fields/All_pharmacy_names_addresses__c.field-meta.xml
<CustomField>
    <fullName>All_pharmacy_names_addresses__c</fullName>
    <label>All pharmacy names &amp; addresses</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>