unpackaged/main/default/objects/Camp_Lejeune__c/fields/All_treatment_facility_names_address__c.field-meta.xml
<CustomField>
    <fullName>All_treatment_facility_names_address__c</fullName>
    <description>Please list all treatment facility names and addresses</description>
    <inlineHelpText>Please list all treatment facility names and addresses</inlineHelpText>
    <label>All treatment facility names &amp; address</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>