unpackaged/main/default/objects/Camp_Lejeune__c/fields/Branch_discharge_status_and_rank__c.field-meta.xml
<CustomField>
    <fullName>Branch_discharge_status_and_rank__c</fullName>
    <label>Branch, discharge status and rank</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>