unpackaged/main/default/objects/Camp_Lejeune__c/fields/Branch_of_Service__c.field-meta.xml
<CustomField>
    <fullName>Branch_of_Service__c</fullName>
    <label>Branch of Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Air Force</fullName>
            </value>
            <value>
                <fullName>Army</fullName>
            </value>
            <value>
                <fullName>Coast Guard</fullName>
            </value>
            <value>
                <fullName>Marine Corps</fullName>
            </value>
            <value>
                <fullName>National Guard</fullName>
            </value>
            <value>
                <fullName>Navy</fullName>
            </value>
            <value>
                <fullName>Space Force</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>