unpackaged/main/default/objects/Camp_Lejeune__c/fields/Cancer_disease_syndrome_fertility_issue__c.field-meta.xml
<CustomField>
    <fullName>Cancer_disease_syndrome_fertility_issue__c</fullName>
    <description>Have you been diagnosed with any form of cancer, disease, syndrome or fertility issue?</description>
    <inlineHelpText>Have you been diagnosed with any form of cancer, disease, syndrome or fertility issue?</inlineHelpText>
    <label>Cancer/disease/syndrome/fertility issue</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bladder Cancer</fullName>
            </value>
            <value>
                <fullName>Kidney Cancer</fullName>
            </value>
            <value>
                <fullName>Leukemia (All types, adult or childhood)</fullName>
            </value>
            <value>
                <fullName>Liver Cancer</fullName>
            </value>
            <value>
                <fullName>Non-Hodgkin lymphoma</fullName>
                <label>Non-Hodgkin Lymphoma</label>
            </value>
            <value>
                <fullName>Kidney disease (End stage renal (ESRD), Renal Toxicity, Chronic Kidney Disease, etc.)</fullName>
            </value>
            <value>
                <fullName>Multiple myeloma and myelodysplastic Syndromes</fullName>
            </value>
            <value>
                <fullName>Parkinson disease</fullName>
            </value>
            <value>
                <fullName>Systemic Sclerosis</fullName>
            </value>
            <value>
                <fullName>Breast Cancer (male)</fullName>
            </value>
            <value>
                <fullName>Esophageal Cancer</fullName>
            </value>
            <value>
                <fullName>Lung Cancer</fullName>
            </value>
            <value>
                <fullName>Miscarriage / Fetal Death</fullName>
            </value>
            <value>
                <fullName>Congenital Cardiac Defect</fullName>
            </value>
            <value>
                <fullName>Other Serious Birth Defects (Major Malformations, Neural Tube Defects, Oral Cleft Defects, Eye Defects)</fullName>
            </value>
            <value>
                <fullName>Aplastic Anemia</fullName>
            </value>
            <value>
                <fullName>Brain Cancer (CNS / Central Nervous System Cancer)</fullName>
            </value>
            <value>
                <fullName>Breast Cancer (female)</fullName>
            </value>
            <value>
                <fullName>Cervical Cancer</fullName>
            </value>
            <value>
                <fullName>Hodgkins Disease (Lymphoma)</fullName>
            </value>
            <value>
                <fullName>Ovarian Cancer</fullName>
            </value>
            <value>
                <fullName>Prostate Cancer</fullName>
            </value>
            <value>
                <fullName>Rectal Cancer</fullName>
            </value>
            <value>
                <fullName>Soft Tissue Cancer / Sarcoma</fullName>
            </value>
            <value>
                <fullName>Liver Disease (Cirrhosis, Fatty Liver Disease, Hepatic Steatosis, Liver Failure)</fullName>
            </value>
            <value>
                <fullName>ALS</fullName>
            </value>
            <value>
                <fullName>Bile Duct Cancer</fullName>
            </value>
            <value>
                <fullName>Colon Cancer (Intestinal, Appendix)</fullName>
            </value>
            <value>
                <fullName>Laryngeal Cancer</fullName>
            </value>
            <value>
                <fullName>Oral Cancer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>