unpackaged/main/default/objects/Camp_Lejeune__c/fields/Closing_Note__c.field-meta.xml
<CustomField>
    <fullName>Closing_Note__c</fullName>
    <label>Closing Note</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>