unpackaged/main/default/objects/Camp_Lejeune__c/fields/Date_of_First_Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>Date_of_First_Diagnosis__c</fullName>
    <description>Used to help filter diagnosis questions for Camp Lejeune due to needs for extra questions needed by Zach and MBM for cases with Dx after 8/10/2022</description>
    <inlineHelpText>Filter for Cases newer than 8/10/2022</inlineHelpText>
    <label>Date of First Diagnosis</label>
    <type>Date</type>
</CustomField>