unpackaged/main/default/objects/Camp_Lejeune__c/fields/Date_of_formal_Dx_Cancer_med_condition__c.field-meta.xml
<CustomField>
    <fullName>Date_of_formal_Dx_Cancer_med_condition__c</fullName>
    <description>Please list the date of Dx for each Cancer or medical condition you&#39;ve received a formal Dx for</description>
    <inlineHelpText>Please list the date of Dx for each Cancer or medical condition you&#39;ve received a formal Dx for</inlineHelpText>
    <label>Date of formal Dx Cancer/med condition</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>