unpackaged/main/default/objects/Camp_Lejeune__c/fields/Deceased_Military_Personnel_DofD__c.field-meta.xml
<CustomField>
    <fullName>Deceased_Military_Personnel_DofD__c</fullName>
    <description>Military Personnel&#39;s Death of Death</description>
    <label>Deceased Military Personnel DofD</label>
    <type>Date</type>
</CustomField>