unpackaged/main/default/objects/Camp_Lejeune__c/fields/Diagnosed_illnesses__c.field-meta.xml
<CustomField>
    <fullName>Diagnosed_illnesses__c</fullName>
    <description>Have you been diagnosed with any of the following illnesses?</description>
    <inlineHelpText>Have you been diagnosed with any of the following illnesses?</inlineHelpText>
    <label>Diagnosed illnesses</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kidney Cancer</fullName>
            </value>
            <value>
                <fullName>Non-Hodgkin Lymphoma</fullName>
            </value>
            <value>
                <fullName>Multiple Myeloma</fullName>
            </value>
            <value>
                <fullName>Leukemias</fullName>
            </value>
            <value>
                <fullName>Liver Cancer</fullName>
            </value>
            <value>
                <fullName>Bladder Cancer</fullName>
            </value>
            <value>
                <fullName>Systemic Sclerosis/Scleroderma</fullName>
            </value>
            <value>
                <fullName>Aplastic Anemia</fullName>
            </value>
            <value>
                <fullName>Other Myelodysplastic Syndromes</fullName>
            </value>
            <value>
                <fullName>Parkinson’s Disease</fullName>
            </value>
            <value>
                <fullName>Kidney Disease/Renal Toxicity</fullName>
            </value>
            <value>
                <fullName>Major Cardiac Birth Defects</fullName>
            </value>
            <value>
                <fullName>None of the above</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>