unpackaged/main/default/objects/Camp_Lejeune__c/fields/Did_you_reside_or_only_work_at_CL__c.field-meta.xml
<CustomField>
    <fullName>Did_you_reside_or_only_work_at_CL__c</fullName>
    <description>Did you reside or only work at Camp Lejeune</description>
    <label>Did you reside or only work at CL</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Only Worked</fullName>
            </value>
            <value>
                <fullName>Resided</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>