unpackaged/main/default/objects/Camp_Lejeune__c/fields/Discharge_Bos_Status_Rank__c.field-meta.xml
<CustomField>
    <fullName>Discharge_Bos_Status_Rank__c</fullName>
    <label>Discharge Bos Status Rank</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>