unpackaged/main/default/objects/Camp_Lejeune__c/fields/Discharge_Status__c.field-meta.xml
<CustomField>
    <fullName>Discharge_Status__c</fullName>
    <label>Discharge Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Honorable</fullName>
            </value>
            <value>
                <fullName>Dishonorable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>