unpackaged/main/default/objects/Camp_Lejeune__c/fields/Do_you_currently_smoke_cigarettes__c.field-meta.xml
<CustomField>
    <fullName>Do_you_currently_smoke_cigarettes__c</fullName>
    <label>Do you currently smoke cigarettes?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>