unpackaged/main/default/objects/Camp_Lejeune__c/fields/Do_you_receive_any_of_following_benefits__c.field-meta.xml
<CustomField>
    <fullName>Do_you_receive_any_of_following_benefits__c</fullName>
    <description>Do you receive any of the following benefits?</description>
    <inlineHelpText>Do you receive any of the following benefits?</inlineHelpText>
    <label>Do you receive any of following benefits</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SSD</fullName>
            </value>
            <value>
                <fullName>SSI</fullName>
            </value>
            <value>
                <fullName>VA Disability</fullName>
            </value>
            <value>
                <fullName>VA Pension</fullName>
            </value>
            <value>
                <fullName>VA Survivors Benefits</fullName>
            </value>
            <value>
                <fullName>None of the Above</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>