unpackaged/main/default/objects/Camp_Lejeune__c/fields/Documents_related_to_Camp_Lejeune__c.field-meta.xml
<CustomField>
    <fullName>Documents_related_to_Camp_Lejeune__c</fullName>
    <description>Do you have any documents related to your time at Camp Lejeune?</description>
    <inlineHelpText>Do you have any documents related to your time at Camp Lejeune?</inlineHelpText>
    <label>Documents related to Camp Lejeune?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>