unpackaged/main/default/objects/Camp_Lejeune__c/fields/Estimate_Dates_at_Camp_Lejuene__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Dates_at_Camp_Lejuene__c</fullName>
    <description>Please estimate the first and last date you served, worked or lived at Camp Lejeune?</description>
    <inlineHelpText>Please estimate the first and last date you served, worked or lived at Camp Lejeune?</inlineHelpText>
    <label>Estimate Dates at Camp Lejeune</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Some time between 8/1/1953 and 12/31/1987</fullName>
            </value>
            <value>
                <fullName>Before 8/1/1953</fullName>
            </value>
            <value>
                <fullName>After 12/31/1987</fullName>
            </value>
            <value>
                <fullName>Not in Acceptable Date Range</fullName>
                <isActive>false</isActive>
                <label>Not in Acceptable Date Range</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>