unpackaged/main/default/objects/Camp_Lejeune__c/fields/First_Date_at_Camp_Lejuene__c.field-meta.xml
<CustomField>
    <fullName>First_Date_at_Camp_Lejuene__c</fullName>
    <label>First Date at Camp Lejeune</label>
    <type>Date</type>
</CustomField>