unpackaged/main/default/objects/Camp_Lejeune__c/fields/FX_Injured_Party_s_Date_of_Death__c.field-meta.xml
<CustomField>
    <fullName>FX_Injured_Party_s_Date_of_Death__c</fullName>
    <description>Formula field - Date of death field of related Intake &gt; Client</description>
    <formula>Intake__r.litify_pm__Client__r.Date_of_Death__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula field - Date of death field of related Intake &gt; Client</inlineHelpText>
    <label>Injured Party&#39;s Date of Death</label>
    <type>Date</type>
</CustomField>