unpackaged/main/default/objects/Camp_Lejeune__c/fields/FX_Is_Valid_First_Date_At_Camp_Lejuene__c.field-meta.xml
<CustomField>
    <fullName>FX_Is_Valid_First_Date_At_Camp_Lejuene__c</fullName>
    <description>IF First Date is before 8/1/1953 OR After 12/31/1987 THEN False ELSE True</description>
    <formula>IF(ISBLANK(First_Date_at_Camp_Lejuene__c), TRUE,
IF(First_Date_at_Camp_Lejuene__c &lt; DATE(1953, 8, 1), FALSE, 
IF(First_Date_at_Camp_Lejuene__c &gt; DATE(1987, 12, 31), FALSE, 
TRUE)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>IF First Date is before 8/1/1953 OR After 12/31/1987 THEN False ELSE True</inlineHelpText>
    <label>Is Valid First Date At Camp Lejeune?</label>
    <type>Checkbox</type>
</CustomField>