unpackaged/main/default/objects/Camp_Lejeune__c/fields/Has_Death_Certificate__c.field-meta.xml
<CustomField>
    <fullName>Has_Death_Certificate__c</fullName>
    <description>Requested field by MBM partner client for CL NOK questions</description>
    <label>Has Death Certificate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>