unpackaged/main/default/objects/Camp_Lejeune__c/fields/Have_Medical_Records__c.field-meta.xml
<CustomField>
    <fullName>Have_Medical_Records__c</fullName>
    <description>Requested field by A&amp;G partner client for CL NOK questions</description>
    <label>Have Medical Records</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>