unpackaged/main/default/objects/Camp_Lejeune__c/fields/Have_you_ever_smoked_cigarettes_in_the_p__c.field-meta.xml
<CustomField>
    <fullName>Have_you_ever_smoked_cigarettes_in_the_p__c</fullName>
    <label>Have you ever smoked cigarettes in the p</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>