unpackaged/main/default/objects/Camp_Lejeune__c/fields/How_long_did_you_stay_at_Camp_Lejuene__c.field-meta.xml
<CustomField>
    <fullName>How_long_did_you_stay_at_Camp_Lejuene__c</fullName>
    <label>How long did you stay at Camp Lejeune?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Less than 30 days But client was exposed in utero</fullName>
            </value>
            <value>
                <fullName>Less than 30 days, NEVER exposed in utero</fullName>
            </value>
            <value>
                <fullName>30 or more days in total (was NOT exposed in utero/ while pregnant with related injury)</fullName>
            </value>
            <value>
                <fullName>30 or more days in total (was ONLY exposed in utero/while pregnant with related injury)</fullName>
            </value>
            <value>
                <fullName>30 or more days in total</fullName>
                <isActive>false</isActive>
                <label>30 or more days in total</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>