unpackaged/main/default/objects/Camp_Lejeune__c/fields/How_many_cigarettes_do_you_smoke_per_day__c.field-meta.xml
<CustomField>
    <fullName>How_many_cigarettes_do_you_smoke_per_day__c</fullName>
    <description>If yes, how many cigarettes do you smoke per day? (1 pack = 20 cigarettes)</description>
    <inlineHelpText>If yes, how many cigarettes do you smoke per day? (1 pack = 20 cigarettes)</inlineHelpText>
    <label>How many cigarettes do you smoke per day</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>