unpackaged/main/default/objects/Camp_Lejeune__c/fields/How_many_cigarettes_per_day_until_stoppe__c.field-meta.xml
<CustomField>
    <fullName>How_many_cigarettes_per_day_until_stoppe__c</fullName>
    <description>How many cigarettes did you smoke per day until you stopped (1 pack = 20 cigarettes)</description>
    <inlineHelpText>How many cigarettes did you smoke per day until you stopped (1 pack = 20 cigarettes)</inlineHelpText>
    <label>How many cigarettes per day until stoppe</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>