unpackaged/main/default/objects/Camp_Lejeune__c/fields/If_applicable_how_many_miscarriages__c.field-meta.xml
<CustomField>
    <fullName>If_applicable_how_many_miscarriages__c</fullName>
    <description>If applicable, please indicate how many miscarriages resulted?</description>
    <inlineHelpText>If applicable, please indicate how many miscarriages resulted?</inlineHelpText>
    <label>If applicable how many miscarriages</label>
    <type>TextArea</type>
</CustomField>