unpackaged/main/default/objects/Camp_Lejeune__c/fields/If_not_continuous_list_all_dates_at_CL__c.field-meta.xml
<CustomField>
    <fullName>If_not_continuous_list_all_dates_at_CL__c</fullName>
    <description>If not continuous, please list all dates you were at Camp Lejeune</description>
    <inlineHelpText>If not continuous, please list all dates you were at Camp Lejeune</inlineHelpText>
    <label>If not continuous list all dates at CL</label>
    <type>TextArea</type>
</CustomField>