unpackaged/main/default/objects/Camp_Lejeune__c/fields/If_yes_for_how_long_have_smoked__c.field-meta.xml
<CustomField>
    <fullName>If_yes_for_how_long_have_smoked__c</fullName>
    <label>If yes, for how long have smoked?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>