unpackaged/main/default/objects/Camp_Lejeune__c/fields/If_yes_when_did_you_begin_smoking__c.field-meta.xml
<CustomField>
    <fullName>If_yes_when_did_you_begin_smoking__c</fullName>
    <label>If yes, when did you begin smoking</label>
    <length>255</length>
    <type>Text</type>
</CustomField>