unpackaged/main/default/objects/Camp_Lejeune__c/fields/In_utero_at_CL_08_01_1953_12_31_1987__c.field-meta.xml
<CustomField>
    <fullName>In_utero_at_CL_08_01_1953_12_31_1987__c</fullName>
    <description>If no, were you in utero, while your mother lived or worked at Camp Lejuene sometime between August 1 1953 and December 31, 1987?</description>
    <inlineHelpText>If no, were you in utero, while your mother lived or worked at Camp Lejuene sometime between August 1 1953 and December 31, 1987?</inlineHelpText>
    <label>In utero at CL 08_01_1953-12_31_1987</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>