unpackaged/main/default/objects/Camp_Lejeune__c/fields/Intake__c.field-meta.xml
<CustomField>
    <fullName>Intake__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intake</label>
    <referenceTo>litify_pm__Intake__c</referenceTo>
    <relationshipName>Camp_Lejuene_Tests</relationshipName>
    <type>Lookup</type>
</CustomField>