unpackaged/main/default/objects/Camp_Lejeune__c/fields/Is_Intake_Lookup_Blank__c.field-meta.xml
<CustomField>
    <fullName>Is_Intake_Lookup_Blank__c</fullName>
    <formula>ISBLANK(Intake__r.Camp_Lejuene__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Intake Lookup Blank?</label>
    <type>Checkbox</type>
</CustomField>