unpackaged/main/default/objects/Camp_Lejeune__c/fields/Last_Date_at_Camp_Lejuene__c.field-meta.xml
<CustomField>
    <fullName>Last_Date_at_Camp_Lejuene__c</fullName>
    <label>Last Date at Camp Lejeune</label>
    <type>Date</type>
</CustomField>