unpackaged/main/default/objects/Camp_Lejeune__c/fields/Last_Four_Stations_Part_1__c.field-meta.xml
<CustomField>
    <fullName>Last_Four_Stations_Part_1__c</fullName>
    <description>Military Form: Last Four Stations</description>
    <label>Last Four Stations - Part 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>