unpackaged/main/default/objects/Camp_Lejeune__c/fields/Last_Four_Stations_Part_3__c.field-meta.xml
<CustomField>
    <fullName>Last_Four_Stations_Part_3__c</fullName>
    <description>Military Form: Last 4 Stations Part 3</description>
    <label>Last Four Stations - Part 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>