unpackaged/main/default/objects/Camp_Lejeune__c/fields/Legal_Authority__c.field-meta.xml
<CustomField>
    <fullName>Legal_Authority__c</fullName>
    <description>Do you have the legal authority in this case?</description>
    <inlineHelpText>Do you have the legal authority in this case?</inlineHelpText>
    <label>Legal Authority?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Caller is Client</fullName>
            </value>
            <value>
                <fullName>Other person is Client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>