unpackaged/main/default/objects/Camp_Lejeune__c/fields/List_All_Addresses_At_CL__c.field-meta.xml
<CustomField>
    <fullName>List_All_Addresses_At_CL__c</fullName>
    <description>Please list all address(es) of where you lived, worked or were stationed including the name of the base</description>
    <inlineHelpText>Please list all address(es) of where you lived, worked or were stationed including the name of the base</inlineHelpText>
    <label>List All Addresses At CL</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>