unpackaged/main/default/objects/Camp_Lejeune__c/fields/List_Dx_treating_doctor_names_spec__c.field-meta.xml
<CustomField>
    <fullName>List_Dx_treating_doctor_names_spec__c</fullName>
    <description>Please list all the Dx doctors and treating doctors names and specialities</description>
    <inlineHelpText>Please list all the Dx doctors and treating doctors names and specialities</inlineHelpText>
    <label>List Dx &amp; treating doctor names &amp; spec</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>