unpackaged/main/default/objects/Camp_Lejeune__c/fields/Matter__c.field-meta.xml
<CustomField>
    <fullName>Matter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Matter</label>
    <referenceTo>litify_pm__Matter__c</referenceTo>
    <relationshipLabel>Camp Lejeune</relationshipLabel>
    <relationshipName>Camp_Lejeune</relationshipName>
    <type>Lookup</type>
</CustomField>