unpackaged/main/default/objects/Camp_Lejeune__c/fields/Military_Personnel_Active_Branch_Service__c.field-meta.xml
<CustomField>
    <fullName>Military_Personnel_Active_Branch_Service__c</fullName>
    <description>Military Personnel&#39;s Active Branch Of Service</description>
    <label>Military Personnel&#39;s Active Branch OS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>