unpackaged/main/default/objects/Camp_Lejeune__c/fields/Military_Personnel_Active_DE__c.field-meta.xml
<CustomField>
    <fullName>Military_Personnel_Active_DE__c</fullName>
    <description>Military Personnel&#39;s ACTIVE Date of Entered</description>
    <label>Military Personnel Active DE</label>
    <type>Date</type>
</CustomField>