unpackaged/main/default/objects/Camp_Lejeune__c/fields/Military_Personnel_Active_DR__c.field-meta.xml
<CustomField>
    <fullName>Military_Personnel_Active_DR__c</fullName>
    <description>Military Personnel&#39;s Active DR</description>
    <label>Military Personnel Active DR</label>
    <type>Date</type>
</CustomField>