unpackaged/main/default/objects/Camp_Lejeune__c/fields/Military_Personnel_Active_SN__c.field-meta.xml
<CustomField>
    <fullName>Military_Personnel_Active_SN__c</fullName>
    <description>Military Personnel ACTIVE Service Number</description>
    <label>Military Personnel Active SN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>