unpackaged/main/default/objects/Camp_Lejeune__c/fields/Military_Personnel_Alive_or_Deceased__c.field-meta.xml
<CustomField>
    <fullName>Military_Personnel_Alive_or_Deceased__c</fullName>
    <description>Is the Military Personnel Alive or Deceased?</description>
    <label>Military Personnel Alive or Deceased</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alive</fullName>
            </value>
            <value>
                <fullName>Deceased</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>