unpackaged/main/default/objects/Camp_Lejeune__c/fields/Military_Personnel_DOB__c.field-meta.xml
<CustomField>
    <fullName>Military_Personnel_DOB__c</fullName>
    <description>Military Personnel&#39;s DOB</description>
    <label>Military Personnel DOB</label>
    <type>Date</type>
</CustomField>