unpackaged/main/default/objects/Camp_Lejeune__c/fields/Military_Personnel_NG_BofS__c.field-meta.xml
<CustomField>
    <fullName>Military_Personnel_NG_BofS__c</fullName>
    <description>Military Personnel&#39;s NG - Branch of Service</description>
    <label>Military Personnel NG - BofS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>