unpackaged/main/default/objects/Camp_Lejeune__c/fields/Military_Personnel_NG_DE__c.field-meta.xml
<CustomField>
    <fullName>Military_Personnel_NG_DE__c</fullName>
    <description>Military Personnel&#39;s NG - Date Entered</description>
    <label>Military Personnel NG - DE</label>
    <type>Date</type>
</CustomField>